--- a/templates/todo/update.html
+++ b/templates/todo/update.html
@@ -4,9 +4,9 @@
 
 {% block content %}
   <div class="uk-card uk-card-default uk-card-body uk-width-1-2@m uk-margin-top">
-    <form id="todoForm" class="uk-form-horizontal">
+    <form id="todoForm" class="uk-form-horizontal" action="/edit/{item_id}">
       <div class="uk-margin uk-inline uk-width-1-1" uk-margin>
-        <input id="contentInput" autocomplete="off" class="uk-input" type="text" name="content" value="">
+        <input id="contentInput" autocomplete="off" class="uk-input" type="text" name="content" value="{{todo.content}}">
         <select name="status" id="status">
             <optgroup label="Select status of todo">
                 <option value="Completed">Completed</option>
@@ -14,7 +14,7 @@
                 <option value="NotYet">Not Yet</option>
             </optgroup>
         </select>
-        <input type="submit" value="submit">
+        <input type="submit" value="save">
       </div>
     </form>
   </div>
