--- a/templates/todo/item.html
+++ b/templates/todo/item.html
@@ -1,4 +1,6 @@
+
+
 <li class="uk-flex uk-flex-between">
-    <p hx-swap="outerHTML" hx-get="/edit/{{ todo.id }}"><span uk-icon="file-edit"></span> {{ todo.content }} <b>{{todo.status}}</b></p>
+    <p ><a href="/update/{{ todo.id }}">{{ todo.content }} <b>{{todo.status}}</b></a> </p>
     <button class="uk-icon-button" uk-icon="icon: close" hx-delete="/delete/{{ todo.id }}"></button>
 </li>
